--- a/views/index.erb
+++ b/views/index.erb
@@ -3,9 +3,8 @@
         <title>sample application</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     </head>
-    
     <body>
-        <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+        <script src="https://d.line-scdn.net/liff/1.0/sdk.js" type="text/javascript"></script>
         <div id='user_name'>Name : XXXX</div>
         <img id='user_photo' src="" width="200px"/>
         <button onclick='clicked()'>send_message</button>
@@ -23,7 +22,6 @@
                 .catch((err) => {
                   console.log('error', err);
                 });
-            
               },
               err => {
                 // LIFF initialization failed
